# mcp-unix-manual

./: Makefile  README.md  pyproject.toml  test_server.py  unix_manual_server.py
tests/: test_server.py
