[project]
name = "mcp-unix-manual"
version = "1.0.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "mcp[cli]>=1.3.0",
]
[project.scripts]
mcp-unix-manual = "unix_manual_server:main"

[tool.uv]
dev-dependencies = ["ruff>=0.9.9", "pytest>=8.0.0"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = "test_*.py"
python_classes = "Test*"
python_functions = "test_*"
